# made-from-scratch

./: CMakeLists.txt
include/opengl/gl/: enums.h  functions.h  types.h
include/util/: vector.h
include/win32/: window.h
include/win32/renderers/: opengl33.h
src/opengl/: gl.c
src/util/: vector.c
src/win32/: entry.c  window.c
src/win32/renderers/: opengl33.c
